# scrapers-intl

./: .gitignore  README.md  pyproject.toml
scrapers/au/: __init__.py  bills.py
scrapers/ca/: __init__.py  bills.py
scrapers/ie/: __init__.py  bills.py
scrapers/in/: __init__.py  bills.py  session_metadata.py
scrapers/uk/: __init__.py  bills.py
